--- a/src/AppBundle/Resources/views/Default/faq.en.html.twig
+++ b/src/AppBundle/Resources/views/Default/faq.en.html.twig
@@ -7,12 +7,12 @@ i		{ font-weight:bold }
 <div style="text-align:justify">
 
 <h1 id="FAQ">Notes, Errata, and Frequently Asked Questions</h1>
-<h3>Version 1.4, effective 6/11/2018</h3>
+<h3>Version 2.0, effective 10/8/2018</h3>
 
 <p>This document contains card clarification, errata, rule clarifications, frequently asked questions, and quick reference material for <em>A Game of Thrones: The Card Game</em>. The most recent version of this document is considered a supplement to the <em>A Game of Thrones: The Card Game</em> Tournament Regulations and the <em>A Game of Thrones: The Card Game</em> <a href="https://thronesdb.com/rulesreference" target="_blank">Rules Reference</a>. All changes and additions to this document since the previous version are marked in <span class="new">red</span>.</p>
 
 <span class="new">
-<p><b>New Content (v1.4):</b> <a href="#Card_Errata">Card Errata</a>, <a href="#Paying_Costs">Game Play</a></p>, <a href="#The_Word_All">Card Ability Interpretation</a></p>, <a href="#Joust_Restricted_List">Joust Restricted List</a></p>, <a href="#Melee_Restricted_List">Melee Restricted List</a></p>, <a href="#Frequently_Asked_Questions">Frequently Asked Questions</a></p>
+<p><b>New Content (v2.0):</b> <a href="#Card_Errata">Card Errata</a>, <a href="#Saving_from_a_Cost">Dynamic Situations</a></p>, <a href="#Joust_Restricted_List">Joust Restricted List</a></p>, <a href="#Frequently_Asked_Questions">Frequently Asked Questions</a></p>
 </span>
 
 <p class="mplain"><b>Notes</b> and <b>Related</b> cards added by <b>mplain</b>.</p>
@@ -30,15 +30,21 @@ The phrase "<em>all relevant <u>reserve</u> modifiers</em>" should read: "<em>al
 
 <h2 id="Card_Errata">Card Errata</h2>
 
-<p>(v1.0) <b><a href="https://thronesdb.com/card/02063" target="_blank">Ser Horas Redwyne</a></b> <em>(Westeros, 63)</em><br>
+<p>(v1.0) <a href="https://thronesdb.com/card/02063" target="_blank">Ser Horas Redwyne</a> <em>(Westeros, 63)</em><br>
 Should read: "<em>...choose and stand a <i>Lady</i> chara<u>c</u>ter.</em>"</p>
 
-<span class="new">
-<p>(v1.4) <b><a href="https://thronesdb.com/card/08112" target="_blank">Driftwood Cudgel</a></b> <em>(Flight of Crows, 112)</em><br>
+<p>(v1.4) <a href="https://thronesdb.com/card/08112" target="_blank">Driftwood Cudgel</a> <em>(Flight of Crows, 112)</em><br>
 Interrupt ability should have the text: "<em>(Limit once per phase.)</em>"</p>
 
-<p>(v1.4) <b><a href="https://thronesdb.com/card/08114" target="_blank">To Go Forward You Must Go Back</a></b> <em>(Flight of Crows, 114)</em><br>
+<p>(v1.4) <a href="https://thronesdb.com/card/08114" target="_blank">To Go Forward You Must Go Back</a> <em>(Flight of Crows, 114)</em><br>
 Should read: "<em><b>Dominance Action:</b> Each player may shuffle his or her hand (of at least 1 card) into his or her deck. Each player that does draws 5 cards.</em>"</p>
+
+<span class="new">
+<p>(v2.0) <a href="https://thronesdb.com/card/05028" target="_blank">Old Wyk</a> <em>(Lions of Casterly Rock, 28)</em><br>
+Should read: "<em>...Then, if you win the challenge by 5 or more STR, return that character to your hand. Otherwise, place it on the bottom of your deck.</em>"</p>
+
+<p>(v2.0) <a href="https://thronesdb.com/card/12001" target="_blank">Balon Greyjoy</a> <em>(Kings of the Isles, 1)</em><br>
+Should read: "<em>...At the end of the phase, if that card is still in play, shuffle it into its owner's deck.</em>"</p>
 </span>
 
 <h1 id="Definitions_and_Terms">Definitions and Terms</h1>
@@ -184,7 +190,6 @@ Should read: "<em><b>Dominance Action:</b> Each player may shuffle his or her ha
 
 <p><em>For example: The first player has <a href="https://thronesdb.com/card/04020" target="_blank">Varys's Riddle</a> (War of Five Kings, 20) revealed, while that player's opponent has <a href="https://thronesdb.com/card/04039" target="_blank">Summer Harvest</a> (War of Five Kings, 39) revealed, creating two conflicting values for the gold value on Summer Harvest. When the Summer Harvest player collects income, the first player will choose which value applies. If another effect later in the round references the gold value on Summer Harvest (for instance, <a href="https://thronesdb.com/card/06046" target="_blank">Underground Vault</a> (Blood and Gold, 46)), the same gold value will be used.</em></p>
 
-<span class="new">
 <h3 id="Paying_Costs">(1.7) Paying Costs</h3>
 
 <p>The resolution of some effects (such as post-then effects or delayed effects) requires that costs are paid after the initiation of the effect. Such costs need not be verified when initiating the ability and determining if its costs can be paid. If such costs cannot be paid at the required time, that aspect of the effect fails to resolve.</p>
@@ -195,7 +200,6 @@ Should read: "<em><b>Dominance Action:</b> Each player may shuffle his or her ha
 
 <p class="mplain"><b>Related:</b> 	<a href="https://thronesdb.com/card/01104" target="_blank">Arianne Martell</a> +
 									<a href="https://thronesdb.com/card/08041" target="_blank">Ramsay Snow</a>.</p>
-</span>
 
 <h2 id="Card_Ability_Interpretation">2. Card Ability Interpretation</h2>
 
@@ -262,13 +266,11 @@ Should read: "<em><b>Dominance Action:</b> Each player may shuffle his or her ha
 					<a href="https://thronesdb.com/card/08019" target="_blank">The Iron Bank</a>,
 					<a href="https://thronesdb.com/card/08070" target="_blank">Sweet Cersei</a></p>
 
-<span class="new">
 <h3 id="The_Word_All">(2.9) The Word "All"</h3>
 
 <p>If an effect causes a card to lose "all" of a given attribute (such as keywords, traits, or faction affiliations), that card loses each instance of each of those attributes. For instance, if an effect causes a character to "lose all <i>Traits</i>," that character will have no traits (even if another effect would cause it to have multiple instances of a given trait).</p>
 
-<p><em>For example: A <a href="https://thronesdb.com/card/02057" target="_blank">Hedge Knight</a> (Westeros, 57) has the <a href="https://thronesdb.com/card/02058" target="_blank">Knighted</a> (Westeros, 58) attachment. If <a href="https://thronesdb.com/card/08082" target="_blank">I Am No One</a> (Flight of Crows, 82) is played on the Hedge Knight, it will no longer have the <i>Knight</i> trait.</em></p>
-</span>					
+<p><em>For example: A <a href="https://thronesdb.com/card/02057" target="_blank">Hedge Knight</a> (Westeros, 57) has the <a href="https://thronesdb.com/card/02058" target="_blank">Knighted</a> (Westeros, 58) attachment. If <a href="https://thronesdb.com/card/08082" target="_blank">I Am No One</a> (Flight of Crows, 82) is played on the Hedge Knight, it will no longer have the <i>Knight</i> trait.</em></p>	
 					
 <h2 id="Dynamic_Situations">3. Dynamic Situations</h2>
 
@@ -285,17 +287,27 @@ Should read: "<em><b>Dominance Action:</b> Each player may shuffle his or her ha
 									<a href="https://thronesdb.com/card/03013" target="_blank">Sansa Stark</a> (WotN) + 
 									<a href="https://thronesdb.com/card/02094" target="_blank">Blood Magic Ritual</a>.</p>
 
+<span class="new">
+<h3 id="Saving_from_a_Cost">(3.2) Saving from a Cost</h3>
 
-<h3 id="Player_Choices_While_Initiating_Abilities">(3.2) Player Choices While Initiating Abilities</h3>
+<p>If a card would leave play as part of the cost of initiating an ability, that card cannot be saved.</p>
+</span>
+
+<h3 id="Player_Choices_While_Initiating_Abilities">(3.3) Player Choices While Initiating Abilities</h3>
 
 <p>Player choices made as part of the initiating an ability/marshaling a card process (<a href="https://thronesdb.com/rulesreference#Initiating_Abilities_Marshaling_Cards" target="_blank">Rules Reference</a>, page 10), including the choosing of targets, are constrained to those that were established as legal options in Step 1 of that process, where the legality of initiating the ability was checked.</p>
 
 <p>If a change in the game state between Step 1 and Step 7 creates a situation in which there are no legal targets at the time targets are chosen, or a situation in which a choice must be made but there are no valid options for that choice, the ability is considered to resolve unsuccessfully. An event that resolves unsuccessfully is placed in its owner's discard pile.</p>
 
-<h3 id="Challenge_Icons">(3.3) Challenge Icons</h3>
+<h3 id="Challenge_Icons">(3.4) Challenge Icons</h3>
 
 <p>A character is considered to have a challenge icon or to not have that icon. A single character that has and/or is gaining the same challenge icon from multiple sources functions as if it has one instance of that icon.</p>
 
+<span class="new">
+<h3 id="Multiple_Copies_of_the_Same_Agenda">(3.5) Multiple Copies of the Same Agenda</h3>
+
+<p>A player cannot run more than 1 copy of each different agenda (by title), even in situations where they are allowed to run multiple agendas.</p>
+</span>
 									
 <h1 id="Card_Legality">Card Legality</h1>
 
@@ -308,28 +320,31 @@ Should read: "<em><b>Dominance Action:</b> Each player may shuffle his or her ha
 <p><b><u>Neutral</u>:</b><br>
 <a href="https://thronesdb.com/card/06040" target="_blank">The Annals of Castle Black</a> <em>(Guarding the Realm, 40)</em><br>
 <a href="https://thronesdb.com/card/06100" target="_blank">Wheels Within Wheels</a> <em>(Oberyn's Revenge, 100)</em><br>
-<span class="new">
 <a href="https://thronesdb.com/card/06039" target="_blank">"The Dornishman's Wife"</a> <em>(Guarding the Realm, 39)</em><br>
 <a href="https://thronesdb.com/card/05049" target="_blank">Littlefinger's Meddling</a> <em>(Lions of Casterly Rock, 49)</em><br>
-<a href="https://thronesdb.com/card/04001" target="_blank">The Dragon's Tail</a> <em>(Across the Seven Kingdoms, 1)</em></p>
+<a href="https://thronesdb.com/card/04001" target="_blank">The Dragon's Tail</a> <em>(Across the Seven Kingdoms, 1)</em><br>
+<span class="new">
+<a href="https://thronesdb.com/card/06098" target="_blank">Flea Bottom</a> <em>(Oberyn's Revenge, 98)</em><br>
+<a href="https://thronesdb.com/card/10045" target="_blank">The Wars to Come</a> <em>(Sands of Dorne, 45)</em><br>
+<a href="https://thronesdb.com/card/10050" target="_blank">Breaking Ties</a> <em>(Sands of Dorne, 50)</em></p>
 </span>
 
 <p><b><u>Lannister</u>:</b><br>
 <a href="https://thronesdb.com/card/05010" target="_blank">Taena Merryweather</a> <em>(Lions of Casterly Rock, 10)</em><br>
-<span class="new">
 <a href="https://thronesdb.com/card/01100" target="_blank">Hear Me Roar!</a> <em>(Core, 100)</em></p>
 
 <p><b><u>Martell</u>:</b><br>
 <a href="https://thronesdb.com/card/01109" target="_blank">The Red Viper</a> <em>(Core, 109)</em><br>
 <a href="https://thronesdb.com/card/04017" target="_blank">Tower of the Sun</a> <em>(Across the Seven Kingdoms, 17)</em></p>
-</span>
 
 <p><b><u>Tyrell</u>:</b><br>
 <a href="https://thronesdb.com/card/06103" target="_blank">Highgarden Minstrel</a> <em>(The Brotherhood Without Banners, 103)</em><br>
-<span class="new">
 <a href="https://thronesdb.com/card/06004" target="_blank">All Men Are Fools</a> <em>(All Men Are Fools, 4)</em><br>
 <a href="https://thronesdb.com/card/09023" target="_blank">"Six Maids in a Pool"</a> <em>(House of Thorns, 23)</em><br>
-<a href="https://thronesdb.com/card/03038" target="_blank">To the Rose Banner!</a> <em>(Wolves of the North, 38)</em></p>
+<a href="https://thronesdb.com/card/03038" target="_blank">To the Rose Banner!</a> <em>(Wolves of the North, 38)</em><br>
+<span class="new">
+<a href="https://thronesdb.com/card/09001" target="_blank">Mace Tyrell</a> <em>(House of Thorns, 1)</em><br>
+<a href="https://thronesdb.com/card/09017" target="_blank">The Hightower</a> <em>(House of Thorns, 17)</em></p>
 </span>
 
 <h2 id="Melee_Restricted_List">Melee Restricted List</h2>
@@ -343,26 +358,20 @@ Should read: "<em><b>Dominance Action:</b> Each player may shuffle his or her ha
 <a href="https://thronesdb.com/card/02060" target="_blank">The Lord of the Crossing</a> <em>(The King's Peace, 60)</em><br>
 <a href="https://thronesdb.com/card/04118" target="_blank">Relentless Assault</a> <em>(Tyrion's Chain, 118)</em><br>
 <a href="https://thronesdb.com/card/06039" target="_blank">"The Dornishman's Wife"</a> <em>(Guarding the Realm, 39)</em><br>
-<span class="new">
 <a href="https://thronesdb.com/card/06098" target="_blank">Flea Bottom</a> <em>(Oberyn's Revenge, 98)</em><br>
 <a href="https://thronesdb.com/card/08098" target="_blank">"The Song of the Seven"</a> <em>(The Faith Militant, 98)</em></p>
-</span>
 
 <p><b><u>Greyjoy</u>:</b><br>
 <a href="https://thronesdb.com/card/01078" target="_blank">Great Kraken</a> <em>(Core, 78)</em><br>
 <a href="https://thronesdb.com/card/02012" target="_blank">Rise of the Kraken</a> <em>(Taking the Black, 12)</em><br>
-<span class="new">
 <a href="https://thronesdb.com/card/09028" target="_blank">Corpse Lake</a> <em>(House of Thorns, 28)</em></p>
-</span>
 
 <p><b><u>Lannister</u>:</b><br>
 <a href="https://thronesdb.com/card/05001" target="_blank">Cersei Lannister</a> <em>(Lions of Casterly Rock, 1)</em><br>
-<span class="new">
 <a href="https://thronesdb.com/card/05010" target="_blank">Taena Merryweather</a> <em>(Lions of Casterly Rock, 10)</em></p>
 
 <p><b><u>Martell</u>:</b><br>
 <a href="https://thronesdb.com/card/01119" target="_blank">Doran's Game</a> <em>(Core, 119)</em></p>
-</span>
 
 <p><b><u>Stark</u>:</b><br>
 <a href="https://thronesdb.com/card/03003" target="_blank">Eddard Stark</a> <em>(Wolves of the North, 3)</em><br>
@@ -370,9 +379,7 @@ Should read: "<em><b>Dominance Action:</b> Each player may shuffle his or her ha
 
 <p><b><u>Targaryen</u>:</b><br>
 <a href="https://thronesdb.com/card/07036" target="_blank">Plaza of Pride</a> <em>(Watchers on the Wall, 36)</em><br>
-<span class="new">
 <a href="https://thronesdb.com/card/01162" target="_blank">Khal Drogo</a> <em>(Core, 162)</em></p>
-</span>
 
 <p><b><u>Tyrell</u>:</b><br>
 <a href="https://thronesdb.com/card/02024" target="_blank">Lady Sansa's Rose</a> <em>(The Road to Winterfell, 24)</em><br>
@@ -495,7 +502,6 @@ Should read: "<em><b>Dominance Action:</b> Each player may shuffle his or her ha
 
 <p>Varys's Riddle allows you to initiate the ability on Summer Harvest as if you had just revealed it. This means that Summer Harvest's ability will trigger twice: one will be the "original" version triggered by your opponent, while the other will be a version "as if you had just revealed it," which changes who is an eligible target for "Choose an opponent." These abilities will each attempt to define the gold value on Summer Harvest: the "original" will look at the printed gold value on Varys's Riddle (which is 5) and define its base gold value as 7, while the other will look at the printed gold value on Summer Harvest (which is X, treated as 0) and define its base gold value as 2. Because these two lasting effects cannot be applied simultaneously, the first player chooses the order in which to apply them, and the base gold value on Summer Harvest will either be 2 or 7 based on the first player's choice.</p>
 
-<span class="new">
 <h3 id="FAQ_16">At Prince Doran's Behest</h3>
 
 <p><i>If I use <a href="https://thronesdb.com/card/10046" target="_blank">At Prince Doran's Behest</a> (Sands of Dorne, 46) to reveal another plot with a when revealed ability, and my opponent also has a plot with a when revealed ability waiting to initiate, which plot's ability initiates first?</i></p>
@@ -507,6 +513,25 @@ Should read: "<em><b>Dominance Action:</b> Each player may shuffle his or her ha
 <p><i>What card effects are covered by the constant ability on <a href="https://thronesdb.com/card/08093" target="_blank">Daenerys Targaryen</a> (Flight of Crows, 93)?</i></p>
 
 <p>Daenerys Targaryen's ability prevents her STR from being reduced by card effects. If a card effect applies a STR modifier that would reduce her STR, that modifier is ignored. This includes subtractive modifiers and halving modifiers, as well as any modifier that would "set" her STR to a value that is lower than her base STR.</p>
+
+<span class="new">
+<h3 id="FAQ_18">Tycho Nestoris</h3>
+
+<p><i>How does <a href="https://thronesdb.com/card/11037" target="_blank">Tycho Nestoris</a> (Dance of Shadows, 37) work in situations where all of a player's opponents are elminated (for instance, due to running out of cards in their deck)? How does he work in tournament games that go to time?</i></p>
+
+<p>If a player controls Tycho Nestoris and his "You cannot win the game" ability is active, nothing within the game rules can cause that player to win the game. If all of that player's opponents are eliminated, the game ends with no winner. (In a tournament, this is recorded as a loss for each player.)</p>
+
+<p>If a tournament game goes to time with a player controlling Tycho at 15 or more power, that player's opponent receives a modified win, as that opponent is considered to be closer to their victory condition. If a tournament game goes to time with both players controlling Tycho, both players receive a loss.</p>
+
+<p>If a player controls Tycho at the end of a Melee game, the best placement that player can achieve is 2nd place. If a tournament Melee game goes to time and a player controlling Tycho has the highest power total, the player with the next-highest power total is the winner of the game.</p>
+
+<p>Tycho does not prevent a player from winning if that player's opponent concedes the game.</p>
+
+<h3 id="FAQ_19">The Hand's Judgment + shadow events</h3>
+
+<p><i>Can <a href="https://thronesdb.com/card/01045" target="_blank">The Hand's Judgment</a> (Core, 45) be used to cancel an event with a "-" cost?</i></p>
+
+<p>Yes. The Hand's Judgment has a cost of X, where X is defined as the printed cost of the event being canceled. If The Hand's Judgment is used to cancel a "—" event, which has no printed cost, that X will be undefined. An undefined X value defaults to 0, therefore The Hand's Judgment can be played for 0 gold.</p>
 </span>
 
 <h1 id="Quick_Reference">Quick Reference</h1>
