--- a/src/AppBundle/Resources/views/Default/faq.en.html.twig
+++ b/src/AppBundle/Resources/views/Default/faq.en.html.twig
@@ -123,7 +123,7 @@ Should read: "<em>...At the end of the phase, if that card is still in play, shu
 
 <h3 id="Duplicates">(1.2) Duplicates</h3>
 
-<p>In order to bring a card into play as a duplicate, both the duplicate and the unique card that would be duplicated must be owned and contolled by the player attempting the duplication.</p>
+<p>In order to bring a card into play as a duplicate, both the duplicate and the unique card that would be duplicated must be owned and controlled by the player attempting the duplication.</p>
 
 <p>A player cannot bring a unique card into play as a duplicate if another copy of that unique card is in his or her dead pile.</p>
 
