--- a/src/AppBundle/Resources/views/Default/rulesreference.en.html.twig
+++ b/src/AppBundle/Resources/views/Default/rulesreference.en.html.twig
@@ -1265,7 +1265,7 @@ span.new	{ color:red }
 
 <p>Many cards with the shadow keyword also have a standard printed cost, in the upper left corner of the card. Any reference to a card's "printed cost" refers to this value. Such a card may be marshaled or played from a player's hand by paying its printed cost, following standard game rules.</p>
 
-<p>During setup, such a card may either be placed as normal for its printed cost, or placed into shadows for 2 gold. While such a card is in shadows, it may be be brought out of shadows only by paying its shadow cost.</p>
+<p>During setup, such a card may either be placed as normal for its printed cost, or placed into shadows for 2 gold. While such a card is in shadows, it may be brought out of shadows only by paying its shadow cost.</p>
 
 <p>Some cards with the shadow keyword have a "-" in place of their printed cost. Such a card cannot be marshaled or played from a player's hand, and may only be played by being brought out of shadows. Such a card has no printed cost. If an ability references the printed cost of that card, a null value is returned.</p>
 
@@ -1409,7 +1409,7 @@ span.new	{ color:red }
 
 <h3 id="Triggered_Abilities">Triggered Abilities</h3>
 
-<p>A triggered ability is any ability with a boldface precursor followed by a colon and the rest of the ability. This incudes actions, phase specific actions, interrupts, reactions, forced interrupts or reactions, and when revealed abilities.</p>
+<p>A triggered ability is any ability with a boldface precursor followed by a colon and the rest of the ability. This includes actions, phase specific actions, interrupts, reactions, forced interrupts or reactions, and when revealed abilities.</p>
 
 <p><strong>Related:</strong> <a href="#Abilities">Abilities</a>, <a href="#Triggering_Condition">Triggering Condition</a></p>
 
