First commit for Cycle Order Download function

--- a/src/AppBundle/Resources/views/Builder/deckview.html.twig
+++ b/src/AppBundle/Resources/views/Builder/deckview.html.twig
@@ -55,6 +55,7 @@
 						<ul class="dropdown-menu" role="menu">
 							<li><a href="{{ path('deck_export_text', {deck_id:deck_id}) }}">{{ 'decks.form.download.text' | trans }}</a></li>
 							<li><a href="{{ path('deck_export_octgn', {deck_id:deck_id}) }}">{{ 'decks.form.download.octgn' | trans }}</a></li>
+							<li><a href="{{ path('deck_export_binder', {deck_id:deck_id}) }}">{{ 'decks.form.download.binderordered' | trans }}</a></li>
 						</ul>
 					</div>
 				</div>
