Add export in release date order
Noticing that the website didn't allow to export in a comfortable way
for people keeping cards in binders in release order, I decided to write
this functionality. It will add the relative menu in the card export.

--- a/src/AppBundle/Resources/views/Builder/deckview.html.twig
+++ b/src/AppBundle/Resources/views/Builder/deckview.html.twig
@@ -54,8 +54,8 @@
 						</button>
 						<ul class="dropdown-menu" role="menu">
 							<li><a href="{{ path('deck_export_text', {deck_id:deck_id}) }}">{{ 'decks.form.download.text' | trans }}</a></li>
+							<li><a href="{{ path('deck_export_text_ordered', {deck_id:deck_id}) }}">{{ 'decks.form.download.text_cycleorder' | trans }}</a></li>
 							<li><a href="{{ path('deck_export_octgn', {deck_id:deck_id}) }}">{{ 'decks.form.download.octgn' | trans }}</a></li>
-							<li><a href="{{ path('deck_export_binder', {deck_id:deck_id}) }}">{{ 'decks.form.download.binderordered' | trans }}</a></li>
 						</ul>
 					</div>
 				</div>
