--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -94,7 +94,7 @@
             <li class="dropdown hidden-xs hidden-lg">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="fa fa-search"></span></a>
                 <div class="dropdown-menu">
-                  <form action="{{ path('cards_find') }}" target="_blank">
+                  <form action="{{ path('cards_find') }}">
                     <input type="text" placeholder="{{ 'nav.cardsearch' | trans }}" class="form-control smart-filter-help" name="q">
                   </form>
               </div>
@@ -121,7 +121,7 @@
             </li>
             {% endif %}
           </ul>
-          <form class="navbar-form navbar-right visible-lg-block visible-xs-block external" action="{{ path('cards_find') }}" target="_blank">
+          <form class="navbar-form navbar-right visible-lg-block visible-xs-block external" action="{{ path('cards_find') }}">
             <div class="form-group">
               <input type="text" placeholder="{{ 'nav.cardsearch' | trans }}" class="form-control smart-filter-help" name="q">
             </div>
