--- a/src/AppBundle/Resources/views/Decklist/toolbar.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/toolbar.html.twig
@@ -14,6 +14,7 @@
 	<ul class="dropdown-menu" role="menu">
 		<li><a href="#" id="btn-download-text">{{ 'decks.form.download.text' | trans }}</a></li>
 		<li><a href="#" id="btn-download-text-cycle-ordered">{{ 'decks.form.download.text_cycleorder' | trans }}</a></li>
+		<li><a href="#" id="btn-download-text-cycle-ordered-deluxe-after">{{ 'decks.form.download.text_cycleorder_deluxe_after' | trans }}</a></li>
 		<li><a href="#" id="btn-download-octgn">{{ 'decks.form.download.octgn' | trans }}</a></li>
 	</ul>
 </div>
