updated maintainer info in page footer.

--- a/src/AppBundle/Resources/views/footer.en.html.twig
+++ b/src/AppBundle/Resources/views/footer.en.html.twig
@@ -7,14 +7,15 @@
     </ul>
     </div>
     <div class="col-md-8">
-
+    <p>
+        Designed and built by <a href="https://github.com/alsciende">Alsciende</a>.
+    </p>
 
     <p>
-    Designed and built by Alsciende.
-    Contact: 
-    <a href="https://twitter.com/alsciende" title="Twitter"><span class="fa fa-twitter"></span></a>
-    <a href="https://reddit.com/user/Alsciende/" title="Reddit"><span class="fa fa-reddit"></span></a>
-    <a href="mailto:alsciende@icloud.com" title="E-mail"><span class="fa fa-envelope"></span></a>
+        Maintained by <a href="https://github.com/stopfstedt">stopfstedt</a>
+        Contact:
+        <a href="https://twitter.com/stefan667" title="Twitter"><span class="fa fa-twitter"></span></a>
+        <a href="mailto:webmaester@thronesdb.com" title="E-mail"><span class="fa fa-envelope"></span></a>
     </p>
 
     <p>
