--- a/src/AppBundle/Resources/views/footer.es.html.twig
+++ b/src/AppBundle/Resources/views/footer.es.html.twig
@@ -8,11 +8,14 @@
     </ul>
 
     <p>
-    Diseñado y construido por Alsciende.
-    Contacto: 
-    <a href="https://twitter.com/alsciende" title="Twitter"><span class="fa fa-twitter"></span></a>
-    <a href="https://reddit.com/user/Alsciende/" title="Reddit"><span class="fa fa-reddit"></span></a>
-    <a href="mailto:alsciende@icloud.com" title="E-mail"><span class="fa fa-envelope"></span></a>
+        Diseñado y construido por <a href="https://github.com/alsciende">Alsciende</a>.
+    </p>
+
+    <p>
+        Mantenido por <a href="https://github.com/stopfstedt">stopfstedt</a>
+        Contact:
+        <a href="https://twitter.com/stefan667" title="Twitter"><span class="fa fa-twitter"></span></a>
+        <a href="mailto:webmaester@thronesdb.com" title="E-mail"><span class="fa fa-envelope"></span></a>
     </p>
 
     <p>
