--- a/src/AppBundle/Resources/views/Builder/deckview.html.twig
+++ b/src/AppBundle/Resources/views/Builder/deckview.html.twig
@@ -53,10 +53,10 @@
 							<span class="fa fa-download"></span> {{ 'forms.download' | trans }} <span class="caret"></span>
 						</button>
 						<ul class="dropdown-menu" role="menu">
-							<li><a href="{{ path('deck_export_text', {deck_id:deck_id}) }}">{{ 'decks.form.download.text' | trans }}</a></li>
-							<li><a href="{{ path('deck_export_text_ordered_deluxe_before', {deck_id:deck_id}) }}">{{ 'decks.form.download.text_cycleorder' | trans }}</a></li>
-							<li><a href="{{ path('deck_export_text_ordered_deluxe_after', {deck_id:deck_id}) }}">{{ 'decks.form.download.text_cycleorder_deluxe_after' | trans }}</a></li>
-							<li><a href="{{ path('deck_export_octgn', {deck_id:deck_id}) }}">{{ 'decks.form.download.octgn' | trans }}</a></li>
+							<li><a href="{{ path('deck_download', {deck_id:deck_id}) }}?format=text">{{ 'decks.form.download.text' | trans }}</a></li>
+							<li><a href="{{ path('deck_download', {deck_id:deck_id}) }}?format=text_cycle">{{ 'decks.form.download.text_cycleset' | trans }}</a></li>
+							<li><a href="{{ path('deck_download', {deck_id:deck_id}) }}?format=theironthrone">{{ 'decks.form.download.theironthrone' | trans }}</a></li>
+							<li><a href="{{ path('deck_download', {deck_id:deck_id}) }}?format=octgn">{{ 'decks.form.download.octgn' | trans }}</a></li>
 						</ul>
 					</div>
 				</div>
