--- a/src/AppBundle/Resources/views/Builder/deckview.html.twig
+++ b/src/AppBundle/Resources/views/Builder/deckview.html.twig
@@ -54,7 +54,7 @@
 						</button>
 						<ul class="dropdown-menu" role="menu">
 							<li><a href="{{ path('deck_download', {deck_id:deck_id}) }}?format=text">{{ 'decks.form.download.text' | trans }}</a></li>
-							<li><a href="{{ path('deck_download', {deck_id:deck_id}) }}?format=text_cycle">{{ 'decks.form.download.text_cycleset' | trans }}</a></li>
+							<li><a href="{{ path('deck_download', {deck_id:deck_id}) }}?format=text_cycle">{{ 'decks.form.download.text_cycle' | trans }}</a></li>
 							<li><a href="{{ path('deck_download', {deck_id:deck_id}) }}?format=theironthrone">{{ 'decks.form.download.theironthrone' | trans }}</a></li>
 							<li><a href="{{ path('deck_download', {deck_id:deck_id}) }}?format=octgn">{{ 'decks.form.download.octgn' | trans }}</a></li>
 						</ul>
