throneteki expects used packs list, as delimiter of sorts. add it back in.

--- a/src/AppBundle/Resources/views/Export/theironthrone.txt.twig
+++ b/src/AppBundle/Resources/views/Export/theironthrone.txt.twig
@@ -5,6 +5,14 @@
 {{ agenda.card.name }}
 {% endfor %}
 
+{% set first_pack = deck.included_packs|first %}
+{% set last_pack = deck.included_packs|last %}
+Packs: {% if deck.included_packs|length > 1 %}
+From {{ first_pack.pack.name }}{% if first_pack.nb > 1 %} ({{ first_pack.nb }}){% endif %} to {{ last_pack.pack.name }}{% if last_pack.nb > 1 %} ({{ last_pack.nb }}){% endif %}
+{% else %}
+{{ first_pack.pack.name }}{% if first_pack.nb > 1 %} ({{ first_pack.nb }}){% endif %}
+{% endif %}
+
 {% set plots = deck.slots_by_type.plot %}
 Plot{% if plots|length > 1 %}s{% endif %}
 
