--- a/src/AppBundle/Resources/views/Export/default.txt.twig
+++ b/src/AppBundle/Resources/views/Export/default.txt.twig
@@ -17,35 +17,35 @@ From {{ first_pack.pack.name }}{% if first_pack.nb > 1 %} ({{ first_pack.nb }}){
 Plot{% if plots|length > 1 %}s{% endif %}
 
 {% for slot in plots %}
-{{ slot.quantity }}x {{ slot.card.name }} ({{ slot.card.pack.name }})
+{{ slot.quantity }}x {{ slot.card.name }} ({{ slot.card.pack.code }})
 {% endfor %}
 
 {% set characters = deck.slots_by_type.character %}
 Character{% if characters|length > 1 %}s{% endif %}
 
 {% for slot in characters %}
-{{ slot.quantity }}x {{ slot.card.name }} ({{ slot.card.pack.name }})
+{{ slot.quantity }}x {{ slot.card.name }} ({{ slot.card.pack.code }})
 {% endfor %}
 
 {% set locations = deck.slots_by_type.location %}
 Location{% if locations|length > 1 %}s{% endif %}
 
 {% for slot in locations %}
-{{ slot.quantity }}x {{ slot.card.name }} ({{ slot.card.pack.name }})
+{{ slot.quantity }}x {{ slot.card.name }} ({{ slot.card.pack.code }})
 {% endfor %}
 
 {% set attachments = deck.slots_by_type.attachment %}
 Attachment{% if attachments|length > 1 %}s{% endif %}
 
 {% for slot in attachments %}
-{{ slot.quantity }}x {{ slot.card.name }} ({{ slot.card.pack.name }})
+{{ slot.quantity }}x {{ slot.card.name }} ({{ slot.card.pack.code }})
 {% endfor %}
 
 {% set events = deck.slots_by_type.event %}
 Event{% if events|length > 1 %}s{% endif %}
 
 {% for slot in events %}
-{{ slot.quantity }}x {{ slot.card.name }} ({{ slot.card.pack.name }})
+{{ slot.quantity }}x {{ slot.card.name }} ({{ slot.card.pack.code }})
 {% endfor %}
 
 {{ footer|default('') }}
