--- a/src/AppBundle/Resources/views/Builder/deckview.html.twig
+++ b/src/AppBundle/Resources/views/Builder/deckview.html.twig
@@ -50,9 +50,13 @@
 					<button type="button" id="btn-print" class="btn btn-default"><span class="fa fa-print"></span> {{ 'forms.print' | trans }}</button>
 					<div class="btn-group">
 						<button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-							<span class="fa fa-download"></span> {{ 'forms.download' | trans }} <span class="caret"></span>
+							<span></span> {{ 'forms.actions' | trans }} <span class="caret"></span>
 						</button>
 						<ul class="dropdown-menu" role="menu">
+							<li class="dropdown-header"><span class="fa fa-external-link"></span> {{ 'forms.export' | trans }}</li>
+							<li><a href="#">{{ 'decks.form.export.octgn' | trans }}</a></li>
+							<li><a href="#">{{ 'decks.form.export.theironthrone' | trans }}</a></li>
+							<li class="dropdown-header"><span class="fa fa-download"></span> {{ 'forms.download' | trans }}</li>
 							<li><a href="{{ path('deck_download', {deck_id:deck_id}) }}?format=text">{{ 'decks.form.download.text' | trans }}</a></li>
 							<li><a href="{{ path('deck_download', {deck_id:deck_id}) }}?format=text_cycle">{{ 'decks.form.download.text_cycle' | trans }}</a></li>
 							<li><a href="{{ path('deck_download', {deck_id:deck_id}) }}?format=octgn">{{ 'decks.form.download.octgn' | trans }}</a></li>
