use clipboard icon, seems more appropriate.

--- a/src/AppBundle/Resources/views/Decklist/toolbar.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/toolbar.html.twig
@@ -12,7 +12,7 @@
 		<span></span> <span class="hidden-sm">{{ 'forms.actions' | trans }}</span> <span class="caret"></span>
 	</button>
 	<ul class="dropdown-menu" role="menu">
-		<li class="dropdown-header"><span class="fa fa-external-link"></span> {{ 'forms.export' | trans }}</li>
+		<li class="dropdown-header"><span class="fa fa-clipboard"></span> {{ 'forms.export' | trans }}</li>
 		<li><a id="btn-export-plaintext" href="#">{{ 'decks.form.export.plaintext' | trans }}</a></li>
 		<li class="dropdown-header"><span class="fa fa-download"></span> {{ 'forms.download' | trans }}</li>
 		<li><a href="#" id="btn-download-text">{{ 'decks.form.download.text' | trans }}</a></li>
