--- a/src/AppBundle/Resources/views/Decklist/toolbar.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/toolbar.html.twig
@@ -18,6 +18,10 @@
 		<li><a href="#" id="btn-download-text">{{ 'decks.form.download.text' | trans }}</a></li>
 		<li><a href="#" id="btn-download-text-cycle">{{ 'decks.form.download.text_cycle' | trans }}</a></li>
 		<li><a href="#" id="btn-download-octgn">{{ 'decks.form.download.octgn' | trans }}</a></li>
+		<li class="dropdown-header"><span class="fa fa-sort"></span> {{ 'forms.sort' | trans }}</li>
+		<li><a href="#" id="btn-sort-default">{{ 'decks.form.sort.by_type' | trans }}</a></li>
+		<li><a href="#" id="btn-sort-cycle">{{ 'decks.form.sort.by_cycle' | trans }}</a></li>
+		<li><a href="#" id="btn-sort-cost">{{ 'decks.form.sort.by_cost' | trans }}</a></li>
 	</ul>
 </div>
 {#
