sort by type/cycle/gold in deck/decklist viewer.

--- a/src/AppBundle/Resources/views/Builder/deckview.html.twig
+++ b/src/AppBundle/Resources/views/Builder/deckview.html.twig
@@ -61,9 +61,9 @@
 							<li><a href="{{ path('deck_download', {deck_id:deck_id}) }}?format=text_cycle">{{ 'decks.form.download.text_cycle' | trans }}</a></li>
 							<li><a href="{{ path('deck_download', {deck_id:deck_id}) }}?format=octgn">{{ 'decks.form.download.octgn' | trans }}</a></li>
 							<li class="dropdown-header"><span class="fa fa-sort"></span> {{ 'forms.sort' | trans }}</li>
-							<li><a href="#" onclick="app.deck.change_sort('default')" id="btn-sort-default">{{ 'decks.form.sort.by_type' | trans }}</a></li>
-							<li><a href="#" onclick="app.deck.change_sort('cycle')" id="btn-sort-cycle">{{ 'decks.form.sort.by_cycle' | trans }}</a></li>
-							<li><a href="#" onclick="app.deck.change_sort('cost')" id="btn-sort-cost">{{ 'decks.form.sort.by_cost' | trans }}</a></li>
+							<li><a href="#" id="btn-sort-default">{{ 'decks.form.sort.by_type' | trans }}</a></li>
+							<li><a href="#" id="btn-sort-cycle">{{ 'decks.form.sort.by_cycle' | trans }}</a></li>
+							<li><a href="#" id="btn-sort-cost">{{ 'decks.form.sort.by_cost' | trans }}</a></li>
 						</ul>
 					</div>
 				</div>
