replaced sorting by cycle with sorting by card number. minor layout fixes.

--- a/src/AppBundle/Resources/views/Builder/deckview.html.twig
+++ b/src/AppBundle/Resources/views/Builder/deckview.html.twig
@@ -62,7 +62,7 @@
 							<li><a href="{{ path('deck_download', {deck_id:deck_id}) }}?format=octgn">{{ 'decks.form.download.octgn' | trans }}</a></li>
 							<li class="dropdown-header"><span class="fa fa-sort"></span> {{ 'forms.sort' | trans }}</li>
 							<li><a href="#" id="btn-sort-default">{{ 'decks.form.sort.by_type' | trans }}</a></li>
-							<li><a href="#" id="btn-sort-cycle">{{ 'decks.form.sort.by_cycle' | trans }}</a></li>
+							<li><a href="#" id="btn-sort-cardnumber">{{ 'decks.form.sort.by_cardnumber' | trans }}</a></li>
 							<li><a href="#" id="btn-sort-cost">{{ 'decks.form.sort.by_cost' | trans }}</a></li>
 						</ul>
 					</div>
