--- a/src/AppBundle/Resources/views/Builder/tab-pane-build.html.twig
+++ b/src/AppBundle/Resources/views/Builder/tab-pane-build.html.twig
@@ -7,7 +7,7 @@
 			</button>
 			<ul class="dropdown-menu" role="menu" id="menu-sort">
 				<li><a href="#" id="btn-sort-default">{{ 'decks.form.sort.by_type' | trans }}</a></li>
-				<li><a href="#" id="btn-sort-cycle">{{ 'decks.form.sort.by_cycle' | trans }}</a></li>
+				<li><a href="#" id="btn-sort-cardnumber">{{ 'decks.form.sort.by_cardnumber' | trans }}</a></li>
 				<li><a href="#" id="btn-sort-cost">{{ 'decks.form.sort.by_cost' | trans }}</a></li>
 			</ul>
 		</div>
