--- a/src/AppBundle/Resources/views/Builder/tab-pane-build.html.twig
+++ b/src/AppBundle/Resources/views/Builder/tab-pane-build.html.twig
@@ -7,6 +7,11 @@
 			</button>
 			<ul class="dropdown-menu" role="menu" id="menu-sort">
 				<li><a href="#" id="btn-sort-default">{{ 'decks.form.sort.by_type' | trans }}</a></li>
+				<li><a href="#" id="btn-sort-name">{{ 'decks.form.sort.by_name' | trans }}</a></li>
+				<li><a href="#" id="btn-sort-set">{{ 'decks.form.sort.by_set' | trans }}</a></li>
+				<li><a href="#" id="btn-sort-setnumber">{{ 'decks.form.sort.by_setnumber' | trans }}</a></li>
+				<li><a href="#" id="btn-sort-faction">{{ 'decks.form.sort.by_faction' | trans }}</a></li>
+				<li><a href="#" id="btn-sort-factionnumber">{{ 'decks.form.sort.by_factionnumber' | trans }}</a></li>
 				<li><a href="#" id="btn-sort-cardnumber">{{ 'decks.form.sort.by_cardnumber' | trans }}</a></li>
 				<li><a href="#" id="btn-sort-cost">{{ 'decks.form.sort.by_cost' | trans }}</a></li>
 			</ul>
