--- a/src/AppBundle/Resources/views/Builder/deckview.html.twig
+++ b/src/AppBundle/Resources/views/Builder/deckview.html.twig
@@ -56,6 +56,7 @@
 						<ul class="dropdown-menu" role="menu">
 							<li class="dropdown-header"><span class="fa fa-clipboard"></span> {{ 'forms.export' | trans }}</li>
 							<li><a id="btn-export-plaintext" href="#">{{ 'decks.form.export.plaintext' | trans }}</a></li>
+							<li><a id="btn-export-markdown" href="#">{{ 'decks.form.export.markdown' | trans }}</a></li>
 							<li class="dropdown-header"><span class="fa fa-download"></span> {{ 'forms.download' | trans }}</li>
 							<li><a href="{{ path('deck_download', {deck_id:deck_id}) }}?format=text">{{ 'decks.form.download.text' | trans }}</a></li>
 							<li><a href="{{ path('deck_download', {deck_id:deck_id}) }}?format=text_cycle">{{ 'decks.form.download.text_cycle' | trans }}</a></li>
