--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -107,7 +107,7 @@
             <li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown">
                 <span class="lang-sm" lang="{{ app.request.locale | default(default_locale) }}"></span>
-                <span class="caret">
+                <span class="caret"></span>
               </a>
               <ul class="dropdown-menu">
                 {% for supported_locale in supported_locales %}
