--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -166,7 +166,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highcharts/4.1.7/highcharts.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-markdown/2.9.0/js/bootstrap-markdown.min.js"></script>
     {% javascripts 
-      '@AppBundle/Resources/public/js/bootstrap-markdown.es.js' %}
+      '@AppBundle/Resources/public/js/bootstrap-markdown.es.js'
+      '@AppBundle/Resources/public/js/bootstrap-markdown.de.js'
+    %}
         <script src="{{ asset_url }}"></script>
     {% endjavascripts %}
 
