--- a/app/Resources/FOSUserBundle/views/Resetting/request.html.twig
+++ b/app/Resources/FOSUserBundle/views/Resetting/request.html.twig
@@ -1,3 +1,4 @@
+{% trans_default_domain 'FOSUserBundle' %}
 {% extends "FOSUserBundle::layout.html.twig" %}
 
 {% block fos_user_content %}
@@ -5,7 +6,7 @@
         <div class="col-md-6 col-md-push-3">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    Reset password
+                    {{ 'resetting.request.submit'|trans }}
                 </div>
                 <div class="panel-body">
                     {% include "FOSUserBundle:Resetting:request_content.html.twig" %}
