--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -1,3 +1,4 @@
+{% trans_default_domain 'FOSUserBundle' %}
 {% extends "@FOSUser/layout.html.twig" %}
 
 {% block fos_user_content %}
@@ -5,7 +6,7 @@
         <div class="col-md-6 col-md-push-3">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    Login
+                    {{ 'layout.login'|trans }}
                 </div>
                 <div class="panel-body">
                     {{ include('@FOSUser/Security/login_content.html.twig') }}
