style RL info in decks/decklists view.

--- a/src/AppBundle/Resources/views/Decklist/decklists.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/decklists.html.twig
@@ -57,7 +57,7 @@ $(function () {
 
 {% include 'AppBundle:Default:pagination.html.twig' %}
 
-<table class="table">
+<table class="table decklists">
 <thead></thead>
 <tbody>
 
