--- a/src/AppBundle/Resources/public/css/style.css
+++ b/src/AppBundle/Resources/public/css/style.css
@@ -499,3 +499,9 @@ article.review .review-comment {
 .diff {
     background: rgba(255,0,0,.5);
 }
+
+/**************** Restricted List indicators *******/
+.decklists .restricted-list-info,
+#decks .restricted-list-info {
+    font-size: small;
+}
