--- a/app/Resources/TwigBundle/views/Exception/error500.html.twig
+++ b/app/Resources/TwigBundle/views/Exception/error500.html.twig
@@ -4,6 +4,10 @@
 
 {% block body %}
 <div class="container">
-    <div class="alert alert-danger" role="alert">The server encountered an error. Please report it to @Alsciende on <a href="https://twitter.com/alsciende">Twitter</a> or <a href="https://www.reddit.com/user/Alsciende/">Reddit</a>.</div>
+    <div class="alert alert-danger" role="alert">
+        The server encountered an error.
+        Please contact us by filing a ticket on <a href="https://github.com/ThronesDB/thronesdb/issues">GitHub</a>
+        or send us an <a href="mailto:webmaester@thronesdb.com">email</a>.
+    </div>
 </div>
 {% endblock %}
