--- a/src/AppBundle/Resources/views/Default/donators.de.html.twig
+++ b/src/AppBundle/Resources/views/Default/donators.de.html.twig
@@ -9,7 +9,7 @@
 <h1>Die großzügigen Spender/innen</h1>
 <p class="lead">ThronesDB wäre ohne sie nicht dieselbe Seite. Vielen, vielen Dank.</p>
 <p>Um unsere Dankbarkeit zu zeigen, wird Spender/innen keine Werbung angezeigt.</p>
-<p>Um zu spenden und den Betrieb dieser Seite zu unterstützen kannst du <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=4EFH86M88SQAC">Paypal (€)</a> oder <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=FXEPSXHMWBU9Q">Paypal ($)</a> verwenden.</p>
+<p>Um zu spenden und den Betrieb dieser Seite zu unterstützen kannst du <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=ZTDRSEFTF8XZJ&currency_code=EUR&source=url">Paypal (€)</a> oder <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=ZTDRSEFTF8XZJ&currency_code=USD&source=url">Paypal ($)</a> verwenden.</p>
 <ul>
 {% for donator in donators %}
 <li>
