--- a/src/AppBundle/Resources/views/Default/donators.en.html.twig
+++ b/src/AppBundle/Resources/views/Default/donators.en.html.twig
@@ -9,7 +9,7 @@
 <h1>The Gracious Donators</h1>
 <p class="lead">ThronesDB wouldn't be the same without them. Many, many thanks.</p>
 <p>To show our appreciation, the content of the site is free of ads for Donators.</p>
-<p>To become a Donator and help run the site, you can use <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=4EFH86M88SQAC">Paypal (€)</a> or <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=FXEPSXHMWBU9Q">Paypal ($)</a>.</p>
+    <p>To become a Donator and help run the site, you can use <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=ZTDRSEFTF8XZJ&currency_code=EUR&source=url">Paypal (€)</a> or <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=ZTDRSEFTF8XZJ&currency_code=USD&source=url">Paypal ($)</a>.</p>
 <ul>
 {% for donator in donators %}
 <li>
