--- a/src/AppBundle/Resources/views/Default/donators.es.html.twig
+++ b/src/AppBundle/Resources/views/Default/donators.es.html.twig
@@ -9,7 +9,7 @@
 <h1>Los graciosos donadores</h1>
 <p class="lead">ThronesDB no sería lo mismo sin ellos. Muchas gracias..</p>
 <p>Para mostrar nuestro agradecimiento, el contenido del sitio está libre de anuncios para los donantes.</p>
-<p>Para convertirse en donador y ayudar a administrar el sitio, puede usar <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=4EFH86M88SQAC">Paypal (€)</a> o <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=FXEPSXHMWBU9Q">Paypal ($)</a>.</p>
+    <p>Para convertirse en donador y ayudar a administrar el sitio, puede usar <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=ZTDRSEFTF8XZJ&currency_code=EUR&source=url">Paypal (€)</a> o <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=ZTDRSEFTF8XZJ&currency_code=USD&source=url">Paypal ($)</a>.</p>
 <ul>
 {% for donator in donators %}
 <li>
