put donation link back in footer.
realigned spanish footer template with english version, while at it.

--- a/src/AppBundle/Resources/views/footer.de.html.twig
+++ b/src/AppBundle/Resources/views/footer.de.html.twig
@@ -31,6 +31,9 @@
     <p>
     Berichte über Bugs und Anregungen und Wünsche zur Weiterentwicklung der Seite bitte an <a href="https://github.com/Alsciende/thronesdb/issues">GitHub</a>.
     </p>
+    <p>
+        Du kannst ThronesDB mit einer Spende auf <a href="https://paypal.me/stopfstedt">Paypal</a> unterstützen.
+    </p>
     </div>
     <div class="col-md-4">
     <p>
