--- a/src/AppBundle/Resources/views/footer.en.html.twig
+++ b/src/AppBundle/Resources/views/footer.en.html.twig
@@ -25,6 +25,10 @@
     <p>
     Please post bug reports and feature requests on <a href="https://github.com/Alsciende/thronesdb/issues">GitHub</a>.
     </p>
+
+    <p>
+        You may contribute by giving money on <a href="https://paypal.me/stopfstedt">Paypal</a>.
+    </p>
     </div>
     <div class="col-md-4">
     <p>
