--- a/src/AppBundle/Resources/views/footer.es.html.twig
+++ b/src/AppBundle/Resources/views/footer.es.html.twig
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" style="margin-bottom:2em">
     <div class="col-xs-12">
 
     <ul class="list-inline">
@@ -6,7 +6,8 @@
     <li><a href="{{ path('api_intro') }}">API</a></li>
     <li><a href="{{ path('donators') }}">Donadores</a> <span class="fa fa-gift donator" title="Los Gentiles Donadores"></span></li>
     </ul>
-
+    </div>
+    <div class="col-md-8">
     <p>
         Diseñado y construido por <a href="https://github.com/alsciende">Alsciende</a>.
     </p>
@@ -28,11 +29,15 @@
     <p>
     Por favor, indicanos cualquier error, sugerencia o petición de caracterísitcas en <a href="https://github.com/Alsciende/thronesdb/issues">GitHub</a>
     </p>
-
+    <p>
+        Puedes contribuir aportando dinero en <a href="https://paypal.me/stopfstedt">Paypal</a>.
+    </p>
+    </div>
+    <div class="col-md-4">
     <p>
     La información presentada en este sitio sobre Juego de Tronos: El juego de cartas Segunda Edición, tanto la gráfica como la literal, está bajo los derechos de
     Fantasy Flight Games. Este sitio no está producido, aprobado, apoyado ni afiliado con Fantasy Flight Games, ni con su distribuidora en España, Edge Entertainment.
     </p>
-
     </div>
+
 </div>
