fixed icon switcheroo in decklists template.

--- a/src/AppBundle/Resources/views/Decklist/decklists.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/decklists.html.twig
@@ -93,8 +93,8 @@ $(function () {
 	</h5>
 	<div class="restricted-list-info">
 		<em>{{ 'decklist.list.restrictedlist.title' | trans }}:</em>
-		<span class="fa {% if decklist.isLegalForJoust %}fa-times{% else %}fa-check{% endif %}"> {{ 'decklist.list.restrictedlist.joust' | trans }}</span> |
-		<span class="fa {% if decklist.isLegalForMelee %}fa-times{% else %}fa-check{% endif %}"> {{ 'decklist.list.restrictedlist.melee' | trans }}</span>
+		<span class="fa {% if decklist.isLegalForJoust %}fa-check{% else %}fa-times{% endif %}"> {{ 'decklist.list.restrictedlist.joust' | trans }}</span> |
+		<span class="fa {% if decklist.isLegalForMelee %}fa-check{% else %}fa-times{% endif %}"> {{ 'decklist.list.restrictedlist.melee' | trans }}</span>
 	</div>
 	</article>
 </td>
