corrects table element id.

--- a/src/AppBundle/Resources/views/Builder/deckview.html.twig
+++ b/src/AppBundle/Resources/views/Builder/deckview.html.twig
@@ -89,7 +89,7 @@
 			</div>
 
 			<!-- Restricted List -->
-			<table class="table table-condensed" id="table-predecessor">
+			<table class="table table-condensed" id="table-restricted-list">
 				<thead>
 				<tr>
 					<th colspan="4">
