updated cards data maintainer info in page footer.

--- a/src/AppBundle/Resources/views/footer.de.html.twig
+++ b/src/AppBundle/Resources/views/footer.de.html.twig
@@ -19,7 +19,7 @@
     </p>
 
     <p>
-    Kartendaten mit großem Einsatz gepflegt von <a href="https://github.com/mplain">mplain</a>. 
+    Kartendaten mit großem Einsatz gepflegt von Team <a href="https://github.com/throneteki">TheIronThrone.net</a>.
     </p>
 
     <p>
