--- a/src/AppBundle/Resources/views/footer.en.html.twig
+++ b/src/AppBundle/Resources/views/footer.en.html.twig
@@ -19,7 +19,7 @@
     </p>
 
     <p>
-    Cards data maintained with great dedication by <a href="https://github.com/mplain">mplain</a>. 
+    Cards data maintained with great dedication by the <a href="https://github.com/throneteki">TheIronThrone.net</a> team.
     </p>
 
     <p>
