--- a/src/AppBundle/Resources/views/footer.es.html.twig
+++ b/src/AppBundle/Resources/views/footer.es.html.twig
@@ -20,6 +20,10 @@
     </p>
 
     <p>
+        Datos de cartas mantenidos por el equipo de <a href="https://github.com/throneteki">TheIronThrone.net</a>.
+    </p>
+
+    <p>
     Traducido al castellano por fafranco82
     Contacto: 
     <a href="https://twitter.com/morifinwe" title="Twitter"><span class="fa fa-twitter"></span></a>
