explicitly turn off autocomplete on card input field.

--- a/src/AppBundle/Resources/views/Search/form.html.twig
+++ b/src/AppBundle/Resources/views/Search/form.html.twig
@@ -13,7 +13,7 @@
             <div class="form-group">
 				<label for="">{{ 'decklist.list.search.used.label' | trans }}</label>
 				{{ cards|default('')|raw }}
-				<input type="text" class="form-control" id="card" placeholder="{{ 'decklist.list.search.used.hint' | trans }}">
+				<input type="text" class="form-control" id="card" autocomplete="off" placeholder="{{ 'decklist.list.search.used.hint' | trans }}">
 			</div>
 		</div>
 		<div class="col-sm-4">
