--- a/src/AppBundle/Resources/views/Decklist/decklist.html.twig
+++ b/src/AppBundle/Resources/views/Decklist/decklist.html.twig
@@ -75,12 +75,12 @@
 				<tbody>
 				<tr>
 					<td>
-						<span class="fa {% if decklist.isLegalForJoust %}fa-check{% else %}fa-times{% endif %}">
+						<span class="fa {% if decklist.isLegalForJoust %}fa-check text-success{% else %}fa-times text-danger{% endif %}">
 							{{ 'decklist.list.restrictedlist.joust' | trans }}
 						</span>
 					</td>
 					<td>
-						<span class="fa {% if decklist.isLegalForMelee %}fa-check{% else %}fa-times{% endif %}">
+						<span class="fa {% if decklist.isLegalForMelee %}fa-check text-success{% else %}fa-times text-danger{% endif %}">
 							{{ 'decklist.list.restrictedlist.melee' | trans }}
 						</span>
 					</td>
