--- a/src/AppBundle/Resources/views/Builder/deckview.html.twig
+++ b/src/AppBundle/Resources/views/Builder/deckview.html.twig
@@ -87,36 +87,9 @@
 			  <div class="panel-body" id="description">
 			  </div>
 			</div>
-
-			<!-- Restricted List -->
-			<table class="table table-condensed" id="table-restricted-list">
-				<thead>
-				<tr>
-					<th colspan="4">
-						<span class="fa fa-bell"></span>
-						{{ 'decklist.list.restrictedlist.title' | trans }}
-					</th>
-				</tr>
-				</thead>
-				<tbody>
-				<tr>
-					<td>
-						<span class="fa {% if deck.isLegalForJoust %}fa-check text-success{% else %}fa-times text-danger{% endif %}">
-							{{ 'decklist.list.restrictedlist.joust' | trans }}
-						</span>
-					</td>
-					<td>
-						<span class="fa {% if deck.isLegalForMelee %}fa-check text-success{% else %}fa-times text-danger{% endif %}">
-							{{ 'decklist.list.restrictedlist.melee' | trans }}
-						</span>
-					</td>
-				</tr>
-				</tbody>
-			</table>
-
-
 			{% include 'AppBundle:Builder:deck-charts.html.twig' %}
 			{% include 'AppBundle:Builder:draw-simulator.html.twig' %}
+			{% include 'AppBundle:Builder:restricted-list.html.twig' %}
 
 			<!-- Published decklists Table -->
 			<table class="table table-condensed" id="table-predecessor">
